<resources>

    <string name="app_name">SpyOnMe</string>

    <!--Strings for MainActivity-->

    <string name="textview_SMS">SMS Control</string>
    <string name="textview_Email">Reply to Email</string>
    <string name="textview_Location">Find Me</string>
    <string name="textview_Phone">Call Me Back</string>
    <string name="textview_Sound">Sound Alert</string>
    <string name="textview_Picture">Take Picture</string>

    <string name="toggle_on">ON</string>
    <string name="toggle_off">OFF</string>

    <string name="description_SMS">This allows your phone to be controlled remotely through SMS.
        You setup a secret keyword (keep it safe!) that will cause your phone to interpret the next
        word(s) in your message as a command. Click on each feature to get its description and
        learn how to use it, options inside brackets are optional. Each feature may be enabled
        or disabled by clicking on the button next to it. Commands may start with either upper
        or lowercase letter.</string>
    <string name="description_Email">Enabling this option allows you
            to text your phone from an email account via an SMS Gateway,
            sending an email to the address 1234567890@carrierDomain.com, where the numbers to
            the left of @ are your 10-digit phone number and the domain is specific to your
            phone carrier. Your phone will then automatically reply to the sender email address.
             You will need to provide login credentials to a Gmail account,
            which will be used to send the response email on behalf of your phone.
            IMPORTANT: You also need to authorize external access to your Gmail account
             by enabling “less secure apps” in settings:
             https://www.google.com/settings/security/lesssecureapps
            before this feature will work. You can create a dummy gmail account if you don\'t
            feel comfortable authorizing external access to your personal account.</string>
    <string name="description_Location">This allows the phone to respond to the find command
        with it\'s current or last known location. When enabled, the phone will respond to
        command with GPS coordinates. Hint: Copy-paste GPS coords to google search bar
        to get map</string>
    <string name="description_Phone">This allows the phone to respond to the call command
        through phone service. When enabled, the phone will call back the number which texted it,
        unless a different number is specified.
        Hints: To call a land line, text via email and add 10 digit phone number after command (no
        dashes!).
        Use this feature to listen to your phone\'s surroundings.</string>
    <string name="description_Sound">This allows the phone to respond to the alert command
        by playing a sound. When enabled, the phone will sound alert for specified duration or
        default duration if option is ommitted. Hint: Use this command to find your phone inside your
        house, it works even if you left the phone in silent mode.</string>
    <string name="description_Picture">This allows the phone to respond to the pic command.
        When enabled, the phone will respond to command with a picture. By default it uses
        front camera, to use back camera add back option. Back camera can take picture using
        flash when flash option is added after back option. IMPORTANT: if texting from another phone,
        you must include a two letter idenfitier for the carrier of that phone.
        Hint: Use the back flash options when you suspect you dropped your phone at your seat
        in the movie theater. </string>

    <string name="syntax_SMS">Syntax: \n&lt;Keyword&gt; command [option1 [option2]]</string>
    <!--<string name="syntax_Email">Syntax: &lt;Keyword&gt; email</string>-->
    <string name="syntax_Location">Syntax: &lt;Keyword&gt; find</string>
    <string name="syntax_Phone">Syntax text from phone: \n&lt;Keyword&gt; call \n
        Syntax text from email: \n&lt;Keyword&gt;  call 11122233331
    </string>
    <string name="syntax_Sound">Syntax: &lt;Keyword&gt; alert [15] \n
        Note: Maximum duration is 25 s</string>
    <string name="syntax_Picture">Syntax text from phone: \n&lt;Keyword&gt; pic cc [back [flash]] \n
    Syntax text from email: \n&lt;Keyword&gt; pic [back [flash]] \n
    cc is a two-letter identifier for the texting phone. Supported carriers: \n
        at for at&amp;t, \t bo for boost mobile, \n
        cr for cricket, \t  sp for sprint, \n
        tm for t-mobile, \t us for us cellular,\n
        ve for verizon, \t  vi for virgin mobile </string>
    <string name="permission_SMS">Permissions: requires SMS services</string>
    <string name="permission_Email">Permissions: requires Email services</string>
    <string name="permission_Location">Permissions: requires GPS services</string>
    <string name="permission_Phone">Permissions: requires Phone services</string>
    <string name="permission_Sound">Permissions: requires no services</string>
    <string name="permission_Picture">Permissions: requires Camera services and Reply to Email
            option enabled</string>

    <!--Strings for KeywordDialog-->

    <string name="title_keyword_dialog">Keyword Dialog</string>
    <string name="edittext_keyword">Enter Keyword</string>

    <!--Strings for EmailDialog-->

    <string name="title_email_dialog">Email Dialog</string>
    <string name="edittext_email">Enter Email Address</string>

    <!--Strings for both dialogs-->

    <string name="actionbtn_set">Set</string>
    <string name="actionbtn_cancel">Cancel</string>

    Strings for HomeActivity

    <string name="title_homeactivity">SpyOnMe!</string>
    <string name="name_author1">Francisco Lopez Garibay</string>
    <string name="name_author2">Rehan Iqbal</string>
    <string name="button_keyword">Enter Keyword</string>

</resources>
