<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context="MainActivity"
                android:gravity="center"
                android:orientation="vertical">

    <LinearLayout

        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:gravity="center">

        <ToggleButton
            android:id="@+id/toggle_SMS"
            android:textOn="@string/toggle_on"
            android:textOff="@string/toggle_off"
            android:layout_weight="1"
            android:layout_marginLeft="16dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/textview_SMS"
            android:textSize="18dp"
            android:layout_marginLeft="18dp"
            android:id="@+id/textview_SMS"
            android:clickable="true" />

    </LinearLayout>


    <LinearLayout

        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:gravity="center">

        <ToggleButton

            android:id="@+id/toggle_Email"
            android:layout_weight="1"
            android:layout_marginLeft="16dp"
            android:textOn="@string/toggle_on"
            android:textOff="@string/toggle_off"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/textview_Email"
            android:textSize="18dp"
            android:layout_marginLeft="18dp"
            android:id="@+id/textview_Email"
            android:clickable="true" />

    </LinearLayout>

    <LinearLayout

        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:gravity="center">

        <ToggleButton
            android:id="@+id/toggle_Location"
            android:layout_weight="1"
            android:layout_marginLeft="16dp"
            android:textOn="@string/toggle_on"
            android:textOff="@string/toggle_off"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/textview_Location"
            android:textSize="18sp"
            android:layout_marginLeft="18dp"
            android:id="@+id/textview_Location"
            android:clickable="true" />

    </LinearLayout>

    <LinearLayout

        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:gravity="center" >

        <ToggleButton
            android:id="@+id/toggle_Phone"
            android:layout_weight="1"
            android:layout_marginLeft="16dp"
            android:textOn="@string/toggle_on"
            android:textOff="@string/toggle_off"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/textview_Phone"
            android:textSize="18sp"
            android:layout_marginLeft="18dp"
            android:id="@+id/textview_Phone"
            android:clickable="true" />

    </LinearLayout>

    <LinearLayout

        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:gravity="center" >

        <ToggleButton
            android:id="@+id/toggle_Sound"
            android:layout_weight="1"
            android:layout_marginLeft="16dp"
            android:textOn="@string/toggle_on"
            android:textOff="@string/toggle_off"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/textview_Sound"
            android:textSize="18sp"
            android:layout_marginLeft="18dp"
            android:id="@+id/textview_Sound"
            android:clickable="true" />

    </LinearLayout>

    <LinearLayout

        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:gravity="center" >

        <ToggleButton
            android:id="@+id/toggle_Picture"
            android:layout_weight="1"
            android:layout_marginLeft="16dp"
            android:textOn="@string/toggle_on"
            android:textOff="@string/toggle_off"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/textview_Picture"
            android:textSize="18sp"
            android:layout_marginLeft="18dp"
            android:id="@+id/textview_Picture"
            android:clickable="true" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:id="@+id/textview_description"
        android:textSize="12dp"
        android:text="@string/description_SMS"
        android:layout_marginBottom="12dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textview_syntax"
        android:text="@string/syntax_SMS"
        android:layout_marginBottom="12dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textview_permission"
        android:text="@string/permission_SMS"
        android:layout_marginBottom="12dp" />

</LinearLayout>